--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
      <!-- navbar -->
      <nav class="navbar navbar-expand-lg  fixed-top navbar-dark">
           <div class="container">
-               <a class="navbar-brand fw-bold " href="#">
+
+               <a class="navbar-brand fw-bold " href="#"><img src="img/logo-toko.png " class="logo" alt="">
                     <font>Fortuna </font>Vape.
                </a>
 
